# yingqiangyuan_me-project

./: .env.example  .gitignore  CLAUDE.md  README.md  mise.toml  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
.claude/: settings.json
.claude/skills/learn-this-project-absorb/: SKILL.md
.claude/skills/learn-this-project-demo/: SKILL.md
.claude/skills/learn-this-project-elevate/: SKILL.md
.claude/skills/learn-this-project-interview/: SKILL.md
.claude/skills/learn-this-project-quiz/: SKILL.md
api/: index.py
app/: globals.css  layout.tsx
app/(marketing)/: HomePageContent.tsx  layout.tsx  page.tsx
app/(marketing)/_components/: ContactSection.tsx  Hero.tsx  StatsSection.tsx
app/_components/common/: CircuitBackground.tsx
app/_components/layouts/: Navigation.tsx
app/chat/: layout.tsx
components/chat/: chat.tsx  message.tsx  multimodal-input.tsx  overview.tsx
data/: achievement-stats.ts  suggested-actions.json
docs/dev-guide/: 01-backend-walkthrough-CN.md  02-frontend-walkthrough-CN.md  03-codebase-walkthrough-CN.md  03-frontend-walkthrough-CN.md
docs/learn-this-project/: 01-knowhow-inventory.md  02-runbook.md  03-elevation-roadmap.md  04-quiz-bank.md  05-interview-playbook.md  06-demo-playbook.md
lib/: constants.ts
lib/seo/: config.ts
resume/: 2026-05-06-all-in-one-resume.md
types/: index.ts
yingqiangyuan_me/: quota.py
yingqiangyuan_me/config/: conf_00_def.py
yingqiangyuan_me/one/: one_00_main.py  one_02_boto3.py
yingqiangyuan_me/prompts/: instruction.md  knowledge-base.md
